@@ -1,3 +1,8 @@
+2004-07-27  Richard Hult  <richard@imendio.com>
+
+	* src/planner-task-dialog.c:
+	(task_dialog_resource_units_cell_edited): Merge from 0.12 branch.
+
 2004-07-19  Richard Hult  <richard@imendio.com>
 
 	* configure.in: Bump.
